# adventofcode

./: .gitignore  .gitmodules  README.md
2020/: README.md
2020/day01_1/: Cargo.toml  README.md
2020/day01_2/: Cargo.toml  README.md
2020/day01_2/src/: lib.rs
2020/day02_1/: Cargo.toml
2020/day02_1/src/: interval.rs  lib.rs  policy.rs
2020/day02_2/: README.md
2020/day02_2/src/: interval.rs  lib.rs  policy.rs
2020/day03_1/: Cargo.toml
2020/day03_1/src/: field.rs  lib.rs  line.rs
2020/day03_2/: Cargo.toml
2020/day03_2/src/: lib.rs
2020/day04_1/src/: lib.rs
2020/day04_2/: Cargo.toml
2020/day04_2/src/: lib.rs
2020/day05_1/: Cargo.toml
2020/day05_1/src/: lib.rs
2020/day06_1/: Cargo.toml
2020/day06_2/: Cargo.toml
2020/day07_1/: Cargo.toml
2020/day07_1/src/: lib.rs
2020/day07_2/: Cargo.toml
2020/day07_2/src/: lib.rs
2020/day_02/day02_1/: README.md
2020/day_02/day02_2/: Cargo.toml  README.md
2020/day_04/day04_1/: Cargo.toml
2020/day_05/day05_2/: Cargo.toml
2020/day_08/day08_1/: Cargo.toml
2021/: README.md  d01.md
2021/01/: Readme.md
2021/01.2/: proto.py
2021/02/: Readme.md
2021/02.1/: proto.py
2021/03/: Readme.md
2021/03.2/: proto.py
2021/04/: Readme.md
2021/04.1/: proto.py
2021/05/: Readme.md
2021/05.1/: proto.py
2021/05.2/: Readme.md  proto.py
2021/06/: Readme.md
2021/07/: Readme.md
2021/07.1/: proto.py
2021/07.2/: proto.py
2021/08/: Readme.md
2021/08.2/: proto.py
2021/09/: Readme.md
2021/10/: Readme.md
2021/11/: Readme.md
2021/11.1/: proto.py
2021/12/: Readme.md
2021/12.2/: proto.py
2021/13/: Readme.md
2021/13.2/: proto.py
2021/14/: Readme.md
2021/14.1/: proto.py
2021/15/: Readme.md
2021/16/: Readme.md
2021/17/: Readme.md
2021/18/: Readme.md
2021/19/: Readme.md
2021/day_01/: README.md
2022/: README.md
2022/08/: forest.pgm  vis.ppm
2022/11/: proto1.py  proto2.py
2022/12/: map.py  path.txt
2023/: .clang-tidy
2023/01/: CMakeLists.txt
2023/02/: .clang-tidy  CMakeLists.txt
2023/03/: .clang-tidy  CMakeLists.txt
2023/04/: .gitignore  CMakeLists.txt
2025/d01/: .clang-format  CMakeLists.txt
2025/d01/src/: main_1.cpp  main_2.cpp  parsing.hpp
2025/d02/: .clang-tidy  CMakeLists.txt
2025/d03/: CMakeLists.txt
2025/d04/: .clang-format  CMakeLists.txt
2025/d05/: CMakeLists.txt
2025/d06/: CMakeLists.txt
2025/d06/src/: main_1.cpp  main_2.cpp
2025/d07/: CMakeLists.txt
2025/d08/: .clang-tidy  CMakeLists.txt
2025/d09/: .clang-format  CMakeLists.txt
2025/d10/: CMakeLists.txt
graph/: Cargo.toml  data.yml
graph/src/: main.rs
(+233 files in other folders)
